--- a/style/main.css
+++ b/style/main.css
@@ -79,6 +79,9 @@ h2 {
     background: url(../img/lightning.png) no-repeat center center;
 }
 
+footer {
+    font-size: 0;
+}
 /*Картинка города */
 .background-town {
     width: 1519px;
@@ -135,26 +138,31 @@ button:hover {
 }
 /*Черный прямоугольник под картинкой*/
 .black-rectangle {
-    font-size: 0;
     width: 1519px;
-    height: 128px;
+    height: 101px;
     background-color: rgb(0, 0, 0);
 }
 /*Отдельный класс с настройками для картинок соц. сетей*/
 .society {
-    margin: 39px 11px;
+    margin: 39px 12px 7px;
     width: 24px;
     height: 24px;
 }
 /*Мучения с картинками*/
 .society--facebook {
-    margin: 38px 5px 42px;
+    width: 28px;
+    height: 28px; 
 }
 
 .society--twitter {
-    margin: 48px 5px 34px;
+    margin: 40px 5px 1px;
     width: 35px;
     height: 35px; 
+}
+
+.society--google {
+    width: 22px;
+    height: 22px;
 }
 
 .society--pinterest {
@@ -163,12 +171,13 @@ button:hover {
 }
 
 .society--stumbleupon {
-    margin: 48px 5px 34px;
-    width: 35px;
-    height: 35px;
+    margin: 48px 5px 1px;
+    width: 38px;
+    height: 38px;
 }
 /*Надпись с юникодом*/
 .axure {
+    margin:7px 0 15px;
     background: black;
     font-size: 12px;
 }
