--- a/style/main.css
+++ b/style/main.css
@@ -94,6 +94,7 @@ footer {
     height: 325px;
     background-color: rgb(0, 0, 0, 0.5);
 }
+
 /*Заголовок*/
 .caption {
     padding: 65px 0 0;
@@ -139,12 +140,12 @@ button:hover {
 /*Черный прямоугольник под картинкой*/
 .black-rectangle {
     width: 1519px;
-    height: 101px;
+    height: 94px;
     background-color: rgb(0, 0, 0);
 }
 /*Отдельный класс с настройками для картинок соц. сетей*/
 .society {
-    margin: 39px 12px 7px;
+    margin: 39px 11px 7px;
     width: 24px;
     height: 24px;
 }
@@ -155,29 +156,38 @@ button:hover {
 }
 
 .society--twitter {
-    margin: 40px 5px 1px;
+    margin: 40px 11px 1px;
     width: 35px;
     height: 35px; 
 }
 
 .society--google {
+    margin: 1px 11px 7px; 
     width: 22px;
     height: 22px;
 }
 
 .society--pinterest {
+    margin: 1px 11px 6px;
     width: 28px;
     height: 26px;
 }
 
 .society--stumbleupon {
-    margin: 48px 5px 1px;
+    margin: 48px 11px 1px;
     width: 38px;
     height: 38px;
 }
+
 /*Надпись с юникодом*/
 .axure {
-    margin:7px 0 15px;
+    margin:7px 0 0;
     background: black;
     font-size: 12px;
+}
+/*Черная линия после юникода*/
+.black-line {
+    height: 15px;
+    background: black;
+    border: none;
 }
